--- a/static/bootstrap/css/bootstrap.css
+++ b/static/bootstrap/css/bootstrap.css
@@ -6167,6 +6167,31 @@ a.badge:focus {
 }
 
 /*Hackathon additions*/
+#spacer100 {
+	height: 100px;
+}
+#content-container {
+	margin-top: 40px;
+}
+#homepage-logo {
+	text-align: center;
+}
+#btn-signin {
+	color: #3f94d0;
+}
+#powered-by {
+	text-align: center;
+}
+#powered-by  span{
+	color: #3f94d0;
+	font-weight: bold;
+}
+#foursquare-logo{
+	height: 50px;
+}
+#venmo-logo{
+	height: 30px;
+}
 .form-signin {
     max-width: 300px;
     padding: 19px 29px 29px;
@@ -6179,7 +6204,6 @@ a.badge:focus {
     -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
        -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
             box-shadow: 0 1px 2px rgba(0,0,0,.05);
-	margin-top: 80px;
 }
 .form-signin .form-signin-heading,
 .form-signin .checkbox {
