--- a/templates/venmo-login.html
+++ b/templates/venmo-login.html
@@ -16,12 +16,14 @@
 		</div>
 		<div class="span6" id="homepage-logo">
 			<img src="../static/images/logo.png" style="padding: 10px;"/>
-			<h1>Share money at your favorite places.</h1>
+			<h1>Great! You can now receive money.</h1><br>
+			<h3>Once you check in, we'll let you know how to redeem your gift with Venmo.</h3><br>
+			
 			<br>
-			<h3>It's easy - sign in with your Foursquare account to begin.</h3>
 			<br>
-			<a href="venmo-login.html">
-				<div class="btn btn-large btn-primary" id="btn-signin">Sign in with Foursquare</div>
+			<p>Want to be able to send gifts to people? Connect your Venmo account and get started!</p>
+			<a href="logged-in.html">
+				<div class="btn btn-large" id="btn-signin-venmo">Sign in with Venmo</div>
 			</a>
 			<p>*We never post without your permission.</p>
 		</div>
