Changed venmo link

--- a/templates/venmo-login.html
+++ b/templates/venmo-login.html
@@ -22,7 +22,7 @@
 			<br>
 			<br>
 			<p>Want to be able to send gifts to people? Connect your Venmo account and get started!</p>
-			<a href="logged-in.html">
+			<a href="home.html">
 				<div class="btn btn-large" id="btn-signin-venmo">Sign in with Venmo</div>
 			</a>
 			<p>*We never post without your permission.</p>
