test token retrieval

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
 			<br>
 			<h3>It's easy - sign in with your Foursquare account to begin.</h3>
 			<br>
-			<a href="venmo-login.html">
+			<a href={{foursquare_auth_url}}>
 				<div class="btn btn-large btn-primary" id="btn-signin">Sign in with Foursquare</div>
 			</a>
 			<p>*We never post without your permission.</p>
