--- a/templates/venmo-login.html
+++ b/templates/venmo-login.html
@@ -10,6 +10,9 @@
 <!-- content container -->
 
 <div class="container" id="content-container">
+	<div class="row span2 offset10">
+		<a href="http://www.google.com"><div class="btn btn-primary">Log out</div></a>
+	</div>
 	<div class="row">
 		<div class="span6 hidden-phone" id="screenshot">
 			[insert screenshot]
@@ -44,4 +47,5 @@
 </div> <!-- /container -->
 
 </body>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 </html>
