--- a/templates/index.html
+++ b/templates/index.html
@@ -42,4 +42,5 @@
 </div> <!-- /container -->
 
 </body>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 </html>
