--- a/templates/venmo-login.html
+++ b/templates/venmo-login.html
@@ -38,10 +38,12 @@
 		<div class="span12" id="powered-by">
 		<span>Powered by &nbsp;</span>
 			<a href="http://www.foursquare.com"><img src="../static/images/foursquare-logo.png" id="foursquare-logo" /></a>
-			<span>&nbsp;, &nbsp;</span>
+			<span>&nbsp; &nbsp;</span>
 			<a href="http://www.venmo.com"><img src="../static/images/venmo_logo_blue.png" id="venmo-logo" /></a>
-			<span>&nbsp; and &nbsp;</span>
+			<span>&nbsp; &nbsp;</span>
 			<a href="http://www.sendgrid.com"><img src="../static/images/sendgrid-logo.png" id="sendgrid-logo" /></a>
+			<span>&nbsp; &nbsp;</span>
+			<a href="http://www.mongodb.org"><img src="../static/images/mongodb-logo.png" id="mongodb-logo" /></a>
 		</div>
 	</div>
 </div> <!-- /container -->
