--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="../static/bootstrap/css/bootstrap.css" rel="stylesheet">
 	<link href="../static/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<title>GeoCash</title>
 </head>
 <body>
@@ -27,6 +27,7 @@
 		<button class="btn btn-large btn-primary" type="submit">Sign in</button>
 	</form>-->
 	
+	<!-- area for user input -->
 	<div class="row">
 		<div class="span5">
 			<input type="text" name="venue_name" id="venue_name" class="input-block-level" placeholder="Venue name">
@@ -38,36 +39,75 @@
 			<button class="btn btn-primary" type="submit" id="finditbutton">Find it!</button>
 		</div>
 	</div>
+	
+	<!-- search results -->
 	<div class="row">
 		<div class="span12">
+			<div class="error-holder">
+			</div>
 			<div class="data-holder">
 			</div>
+		<!-- custom javascript to dynamically populate search results -->
 		<script type="text/javascript">
+		//On document ready, wait for button click
 		$(document).ready(function(){
-			//alert("ready!");
-			$("#finditbutton").click(function(){
-			var location_url = "&near=" + $("#geocode").val();
-			var name_url = "&query=" + $("#venue_name").val();
-			var ajax_base_url = "https://api.foursquare.com/v2/venues/search?oauth_token=FOHYFALGXXFJYRX214AU2OEAJIT43MZTFVUHYZDE0GRHBSSS&v=20130907&limit=10";
-			var ajax_url = ajax_base_url + location_url + name_url;
-			
-			
-			$.ajax({
-				  url: ajax_url,
-				  beforeSend: function ( xhr ) {
-					xhr.overrideMimeType("text/plain; charset=x-user-defined");
-				  }
-				}).done(function ( data ) {
-				  if( console && console.log ) {
-					console.log("Sample of data:", data.slice(0, 100));
-				  }
-				  //alert(data);
-				  $(".data-holder").html(data);
-				  var obj = jQuery.parseJSON(data);
-				  console.log(obj);	
-			});
-			});
-		});
+		//when submit button is clicked, begin error checking and searching
+		$("#finditbutton").click(function(){
+		
+			//error checking first - must have venue name and geocode
+			var error = "";
+			if($("#venue_name").val() == "")
+				error += "Please give part of a venue name so we can search for you.<br>";
+			if($("#geocode").val() == "")
+				error += "Please give an area within which to search (e.g. New York or 90210 or Chicago, IL).";
+			//set error to hold either "" or new error(s)
+			$(".error-holder").html(error);
+
+			//if no errors, run the search and populate results
+			if(error == "") {
+				var name_url = "&query=" + $("#venue_name").val();
+				var location_url = "&near=" + $("#geocode").val();
+				/* really should be using client id/secret, but just using AUTH TOKEN for now */
+				var ajax_base_url = "https://api.foursquare.com/v2/venues/search?oauth_token=FOHYFALGXXFJYRX214AU2OEAJIT43MZTFVUHYZDE0GRHBSSS&v=20130907&limit=10";
+				var ajax_url = ajax_base_url + name_url + location_url;
+				
+				$.ajax({
+						url: ajax_url,
+						beforeSend: function ( xhr ) {
+							xhr.overrideMimeType("text/plain; charset=x-user-defined");
+						}
+					}).done(function ( data ) {
+						//DEBUGGING INFO - uncomment to show
+						/*if( console && console.log ) {
+							console.log("Sample of data:", data.slice(0, 100));
+						}*/
+						//alert(data);
+					  
+						//parse JSON data
+						var obj = jQuery.parseJSON(data);
+						//console.log(obj);	
+						
+						//if no results, display error message
+						if( !obj.response.venues[0] ) {
+							$(".data-holder").html("Sorry, we couldn't find anything! Try searching in a broader area or with a different name.");
+						}
+						//if result(s), iterate through and display
+						else {
+							//$(".data-holder").html(data);
+							//alert(obj.response.venues[0].name);
+							var dataHTML = "";
+							for(var i=0; i<obj.response.venues.length; i++){
+								var venue = obj.response.venues[i];
+								dataHTML += "<a href=\"http://www.google.com\"><div class=\"btn btn-select-venue\">";
+								dataHTML += venue.name + " - " + venue.location.address + " " + venue.location.crossStreet;
+								dataHTML += "</div></a><br><br>";
+							}
+							$(".data-holder").html(dataHTML);
+						}
+				}); //end ajax
+			} // end of search & population (no errors to start)
+		}); //end of click function
+		}); //end of document ready
 		</script>
 		</div>
 	</div>
@@ -78,10 +118,12 @@
 		<div class="span12" id="powered-by">
 		<span>Powered by &nbsp;</span>
 			<a href="http://www.foursquare.com"><img src="../static/images/foursquare-logo.png" id="foursquare-logo" /></a>
-			<span>&nbsp;, &nbsp;</span>
+			<span>&nbsp; &nbsp;</span>
 			<a href="http://www.venmo.com"><img src="../static/images/venmo_logo_blue.png" id="venmo-logo" /></a>
-			<span>&nbsp; and &nbsp;</span>
+			<span>&nbsp; &nbsp;</span>
 			<a href="http://www.sendgrid.com"><img src="../static/images/sendgrid-logo.png" id="sendgrid-logo" /></a>
+			<span>&nbsp; &nbsp;</span>
+			<a href="http://www.mongodb.org"><img src="../static/images/mongodb-logo.png" id="mongodb-logo" /></a>
 		</div>
 	</div>
 </div> <!-- /container -->
