--- a/templates/venmo-login.html
+++ b/templates/venmo-login.html
@@ -11,7 +11,7 @@
 
 <div class="container" id="content-container">
 	<div class="row span2 offset10">
-		<a href="http://www.google.com"><div class="btn btn-primary">Log out</div></a>
+		<a href="http://geocash.herokuapp.com/logout/"><div class="btn btn-primary">Log out</div></a>
 	</div>
 	<div class="row">
 		<div class="span6 hidden-phone" id="screenshot">
