--- a/templates/pick-venue.html
+++ b/templates/pick-venue.html
@@ -103,13 +103,33 @@
 							//$(".data-holder").html(data);
 							//alert(obj.response.venues[0].name);
 							var dataHTML = "";
+
+							//create parray that will hold lat/lng pairs
+							var LatLngArray = new Array();
+
 							for(var i=0; i<obj.response.venues.length; i++){
 								var venue = obj.response.venues[i];
 								dataHTML += "<a href=\"http://www.google.com\"><div class=\"btn btn-select-venue\">";
 								dataHTML += venue.name + " - " + venue.location.address + " " + venue.location.crossStreet;
 								dataHTML += "</div></a><br><br>";
+
+
+								var lat = venue.location.lat;
+								var lng = venue.location.lng;
+								var latlng = L.LatLng(lat, lng);
+								var arrayLength = LatLngArray.push(latlng);	
+								var locationAddress = "";
+								if(venue.location.address){
+									locationAddress = venue.location.address;
+								}	
+								L.marker([lat, lng]).addTo(map).bindPopup("<b>" + venue.name + "</b><br/>" + locationAddress);
+
+								
 							}
 							$(".data-holder").html(dataHTML);
+							//console.log(LatLngArray);
+							map.setBounds(L.LatLngBounds(LatLngArray));
+							//map.setView([10, -0.53], 13);
 						}
 				}); //end ajax
 			} // end of search & population (no errors to start)
@@ -138,18 +158,18 @@
 
 
 		L.marker([51.5, -0.09]).addTo(map)
-			.bindPopup("<b>Hello world!</b><br />I am a popup.").openPopup();
+			.bindPopup("<b>Hello world!</b><br />I am a popup.");
 
 		var popup = L.popup();
 
-		function onMapClick(e) {
+		/*function onMapClick(e) {
 			popup
 				.setLatLng(e.latlng)
 				.setContent("You clicked the map at " + e.latlng.toString())
 				.openOn(map);
 		}
 
-		map.on('click', onMapClick);
+		map.on('click', onMapClick);*/
 
 	</script>
 
