--- a/templates/venmo-login.html
+++ b/templates/venmo-login.html
@@ -25,7 +25,7 @@
 			<br>
 			<br>
 			<p>Want to be able to send gifts to people? Connect your Venmo account and get started!</p>
-			<a href="{{venmo_auth_url}}">
+			<a href={{venmo_auth_url}}>
 				<div class="btn btn-large" id="btn-signin-venmo">Sign in with Venmo</div>
 			</a>
 			<p>*We never post without your permission.</p>
