--- a/templates/pick-venue.html
+++ b/templates/pick-venue.html
@@ -18,7 +18,7 @@
 
 <div class="container" id="content-container">
 	<div class="row span2 offset10">
-		<a href="http://www.google.com"><div class="btn btn-primary">Log out</div></a>
+		<a href="https://geocash.herokuapp.com/logout/"><div class="btn btn-primary">Log out</div></a>
 	</div>
 	
 	<!-- area for user input -->
