first shot at friends3

--- a/templates/pick-friend.html
+++ b/templates/pick-friend.html
@@ -38,7 +38,7 @@
 			</div>
 			<div class="data-holder">
 			</div>
-				{% if not len(friends) %} 
+				<!-- {% if not len(friends) %} 
 					Sorry, we couldn't find anything! Try searching in a broader area or with a different name.
 				{% endif %}
 
@@ -46,7 +46,7 @@
 					<a href="pick-venue.html?friend_id={{friend.id}}">
 						<div class="btn btn-select-venue">{{friend.firstName}} {{friend.lastName}}</div>
 					</a>
-				{% endfor %}
+				{% endfor %} -->
 		</div>
 
 		</div>
