first shot at friends8

--- a/templates/pick-friend.html
+++ b/templates/pick-friend.html
@@ -38,16 +38,12 @@
 			</div>
 			<div class="data-holder">
 			</div>
-				
-				<!-- {% if not len(friends) %} 
-					Sorry, we couldn't find anything! Try searching in a broader area or with a different name.
-				{% endif %}
 
 				{% for friend in friends %}
 					<a href="pick-venue.html?friend_id={{friend.id}}">
 						<div class="btn btn-select-venue">{{friend.firstName}} {{friend.lastName}}</div>
 					</a>
-				{% endfor %} -->
+				{% endfor %}
 		</div>
 
 		</div>
