first shot at friends10

--- a/templates/pick-friend.html
+++ b/templates/pick-friend.html
@@ -40,7 +40,7 @@
 			</div>
 
 				{% for friend in friends %}
-					<a href="geocash.herokuapp.com/pick-venue.html?friend_id={{friend.id}}">
+					<a href="http://geocash.herokuapp.com/pick-venue.html?friend_id={{friend.id}}">
 						<div class="btn btn-select-venue">{{friend.firstName}} {{friend.lastName}}</div><br>
 					</a>
 				{% endfor %}
