committing for kaitlin6

--- a/templates/pick-venue.html
+++ b/templates/pick-venue.html
@@ -131,7 +131,7 @@
 							map.fitBounds(LatLngArray);
 							//map.setView([10, -0.53], 13);
 							
-							alert(document.URL);
+							//alert(document.URL);
 						}
 				}); //end ajax
 			} // end of search & population (no errors to start)
