--- a/templates/create-payment.html
+++ b/templates/create-payment.html
@@ -45,10 +45,10 @@
 
 	<script type="text/javascript">
 	$(document).ready(function(){
-		//alert("READY!");
+		alert("READY!");
 		$("#button").click(function(){
 			var message = $("#message").val();
-			var amount = $("#pay_amt").val());
+			var amount = $("#pay_amt").val();
 			var new_url = "http://geocash.herokuapp.com/add_pending_payment?note=" + message + "&amount=" + amount;
 			alert(new_url);
 			window.location = new_url;
