--- a/templates/create-payment.html
+++ b/templates/create-payment.html
@@ -32,8 +32,12 @@
 
 	<!-- Insert here text that tells the user what information will be sent automatically (ie: where the money will be left, the amount of money.  Maybe make it possible to opt out of either piece of information.  -->
 
+	<div class="row">
+		<label for="comments" class="span8 offset2">Leave a note for your friend here!  We will do the work to explain where and how the money can be retrieved.</label>
+	</div>
 
-	<div class'"row">
+
+	<div class="row">
 		<!--<div class="span10">
 			<input type="text" name="message" id="message" class="input-block-level" placeholder="I'm leaving you a gift!">
 		</div>-->
@@ -47,6 +51,9 @@
 		<div class="span2 offset6">
 			<input type="submit" name="submit" value="Send Gift">
 		</div>
+	</div>
+	<div class="row">
+		<label for="comments" class="span6 offset4">You venmo account will get charged when your friend checks in at the requested location.  Don't worry - if your friend never checks in there, you don't have to pay!</label>
 	</div>
 	</form>
 	
