--- a/templates/create-payment.html
+++ b/templates/create-payment.html
@@ -25,12 +25,10 @@
 	<div class="row">
 		<label for="pay_amt" class="span1 offset5">Amount $</label>
 		<div class="span1">
-			<input type="number" step=".01" value="5.00" min=".01" name="pay_amt" id="pay_amt" class="input-block-level" placeholder="0.00">
+			<input type="number" step=".01" value="5.00" min=".01" name="pay_amt" id="pay_amt" class="input-block-level">
 
 		</div>
 	</div>
-
-	<!-- Insert here text that tells the user what information will be sent automatically (ie: where the money will be left, the amount of money.  Maybe make it possible to opt out of either piece of information.  -->
 
 	<div class="row" style="text-align:center">
 		<label for="comments" class="span12">Leave a note for your friend here!  (We will do the work to explain where and how the money can be retrieved, so you don't have to.)</label>
@@ -38,13 +36,8 @@
 
 
 	<div class="row" style="text-align:center">
-		<!--<div class="span10">
-			<input type="text" name="message" id="message" class="input-block-level" placeholder="I'm leaving you a gift!">
-		</div>-->
 		<div class="span12">
-		<textarea name="comments" id="comments" maxlength="2000" style="color:black; width: 600px;" placeholder="I'm leaving you a gift!">
-		   
-		</textarea><br />
+		<textarea name="comments" id="comments" maxlength="2000" style="color:black; width: 600px; height: 100px;" placeholder="I'm leaving you a gift!"></textarea><br />
 		</div>
 	</div>
 	<div class="row" style="text-align:center">
